final fix aside links overflow in institutions pages

--- a/USAID LEV_files/yuri.css
+++ b/USAID LEV_files/yuri.css
@@ -73,7 +73,7 @@ b, strong, .g-bold{
     align-items: center;
     margin: 0;
     box-sizing: border-box;
-    height: 50px;
+    min-height: 50px;
     padding-left: 27px;
 /*    line-height: 50px;*/
     font-family: 'Open Sans', Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
@@ -83,7 +83,7 @@ b, strong, .g-bold{
     cursor: pointer;
 }
 .b-sideMenu__item:first-child .b-sideMenuItem__header{
-    height: 35px;
+    min-height: 35px;
     line-height: 2rem;
 }
 .b-sideSubmenu{
